--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.12"
 dependencies = [
     "langchain-core>=1.0.2",
     "langgraph>=1.0.2",
+    "langgraph-cli[inmem]>=0.4.7",
 ]
