--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,9 @@ dependencies = [
     "langchain-core>=1.0.2",
     "langgraph>=1.0.2",
     "langgraph-cli[inmem]>=0.4.7",
+    "langchain-openai>=1.0.0",
+    "typing-extensions>=4.0.0",
+    "tavily-python>=0.3.0",
+    "python-dotenv>=1.0.0",
+    "pydantic>=2.0.0",
 ]
