Add Brave search and make the agent run

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 # API Keys for incident agent
 OPENAI_API_KEY=your-openai-api-key-here
 TAVILY_API_KEY=your-tavily-api-key-here
+BRAVE_API_KEY=your-brave-api-key-here
 
 # OpenAI Configuration (optional)
 OPENAI_BASE_URL=https://api.openai.com/v1
 # OPENAI_BASE_URL=https://your-custom-endpoint.com/v1
 OPENAI_MODEL=gpt-4o-mini
 # OPENAI_MODEL=gpt-4o
+
+# Search Configuration
+USE_BRAVE_SEARCH=true
+# USE_BRAVE_SEARCH=false
