Add TC search API support

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # API Keys for incident agent
 OPENAI_API_KEY=your-openai-api-key-here
+TC_SECRET_ID=your-tc-secret-id-here
+TC_SECRET_KEY=your-tc-secret-key-here
 TAVILY_API_KEY=your-tavily-api-key-here
 BRAVE_API_KEY=your-brave-api-key-here
 
