--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pydantic>=2.0.0",
     "requests>=2.31.0",
+    "tencentcloud-sdk-python>=3.0.0",
 ]
